src/objects/Tribute__c.object
<CustomObject>
    <description>A recognition of an individual associated with a gift made in honor or memory of an honoree.</description>
    <fields>
        <fullName>Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the honoree for this Donation.</description>
        <inlineHelpText>Lookup to the Contact record of the honoree for this Donation.</inlineHelpText>
        <label>Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tributes (Honoree)</relationshipLabel>
        <relationshipName>Hornoree_Tributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</inlineHelpText>
        <label>Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The name of the Opportunity that the Tribute is associated with.</description>
        <inlineHelpText>The name of the Opportunity that the Tribute is associated with.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tributes</relationshipLabel>
        <relationshipName>Tributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <description>Indicates whether the Donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the Donation is in honor or in memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRB-{00000}</displayFormat>
        <label>Tribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>